# fc4sc

./: .gitignore  CMakeLists.txt
cmake/: uninstall.cmake.in
